# splitweave

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/tile_gen/: default.yaml
configs/word_list_configs/: all_noun_lists.yaml  animals_only.yaml  food_only.yaml  plants_only.yaml  technology_only.yaml
docs/: EXPRESSION_GRAMMAR.md
notebooks/: partwise_check.ipynb
scripts/: build_noun_lists.py  generate_analogical_quartets.py  generate_readme_examples.py  generate_tiles.py
splitweave/: __init__.py
splitweave/analogy_gen/: __init__.py  mtp_bgx_analogies.py  mtp_cellfx_analogies.py  mtp_layout_analogies.py  mtp_tile_analogies.py  rsp_analogies.py
splitweave/cfg_to_sw/: __init__.py  evaluate.py  parser.py
splitweave/pattern_gen/: README.md  __init__.py  colors.py  deformation_func.py  filling_function.py  mtp_bgx.py  mtp_cellfx.py  mtp_layout.py  mtp_main.py  mtp_tile.py  rsp_color.py  rsp_layout.py  rsp_main.py  rsp_splits.py  signal_2d_func.py  splitting_func.py  utils.py
splitweave/shader/: README.md
splitweave/symbolic/: __init__.py  cell_effects.py  coloring.py  compositing.py  deformations.py  edges.py  layout.py  signals.py  tiles.py  transforms.py
splitweave/torch_compute/: __init__.py  eval_cell_canvas.py  eval_cell_effects.py  eval_deformations.py  eval_discrete_signal.py  eval_grid.py  eval_signals.py  eval_sympy.py  eval_tile.py  evaluate.py  functions.py  grid_renorm.py  mapping.py
splitweave/utils/: __init__.py  tiles.py  visualization.py
tests/: conftest.py  test_expressions.py  test_patternator_bridge.py
